# platform.core.appfw.widget-service

./: CMakeLists.txt  livebox-service.pc.in  widget_service.pc.in
TC/: config
TC/testcase/: Makefile  tet_captured  utc_livebox_service.c
data/device/: abi.ini  wayland.mobile.480x800.resolution.ini  wayland.mobile.conf.ini  wayland.mobile.resolution.ini  x11.mobile.320x480.resolution.ini  x11.mobile.480x800.resolution.ini  x11.mobile.540x960.conf.ini  x11.mobile.conf.ini  x11.wearable.360x360.conf.ini  x11.wearable.conf.ini  x11.wearable.resolution.ini
data/emulator/: wayland.mobile.320x480.conf.ini  wayland.mobile.480x800.conf.ini  wayland.mobile.540x960.resolution.ini  wayland.mobile.conf.ini  wayland.wearable.360x360.resolution.ini  wayland.wearable.360x480.conf.ini  wayland.wearable.conf.ini  wayland.wearable.resolution.ini  x11.mobile.320x480.conf.ini  x11.mobile.480x800.conf.ini  x11.mobile.540x960.conf.ini  x11.mobile.conf.ini  x11.wearable.360x360.conf.ini  x11.wearable.360x480.conf.ini  x11.wearable.360x480.resolution.ini  x11.wearable.conf.ini
doc/: dynamicbox_service_doc.h  livebox-service_doc.h  widget_service_doc.h
dynamicbox_service/: CMakeLists.txt  dynamicbox_service.pc.in
dynamicbox_service/TC/: config
dynamicbox_service/TC/testcase/: utc_livebox_service.c
dynamicbox_service/doc/: dynamicbox_service_doc.h
dynamicbox_service/include/: dynamicbox_buffer.h  dynamicbox_cmd_list.h  dynamicbox_conf.h  dynamicbox_script.h  dynamicbox_service.h
dynamicbox_service/src/: dynamicbox_conf.c  dynamicbox_service.c  util.c  util_wayland.c  util_x11.c
include/: debug.h  dynamicbox-errno.h  dynamicbox-service.h  dynamicbox-service_product.h  dynamicbox_buffer.h  dynamicbox_cmd_list.h  dynamicbox_conf.h  dynamicbox_errno.h  dynamicbox_script.h  dynamicbox_service.h  livebox-errno.h  livebox-service.h  livebox-service_internal.h  livebox-service_product.h  util.h  widget_abi.h  widget_buffer.h  widget_cmd_list.h  widget_conf.h  widget_errno.h  widget_instance.h  widget_script.h  widget_service.h  widget_service_internal.h  widget_util.h
livebox-service/: CMakeLists.txt  livebox-service.pc.in
livebox-service/include/: livebox-service.h  livebox-service_product.h
livebox-service/src/: livebox-service.c
livebox/include/: livebox-errno.h
livebox/src/: livebox-service.c
packaging/: libdynamicbox_service.spec  libdynamicbox_service.spec_  liblivebox-service.spec  liblivebox-service.spec.rej  libwidget_service.spec  widget-service.spec
parser/: CMakeLists.txt  widget.sql  widget_plugin_parser.c  widget_plugin_parser_db.c  widget_plugin_parser_db_query.h  widget_plugin_parser_internal.c  widget_plugin_parser_internal.h  widget_plugin_parser_pkgmgr_interface.c
src/: dynamicbox_conf.c  dynamicbox_service.c  livebox-service.c  livebox-service_undoc.c  util.c  util_wayland.c  util_x11.c  widget_abi.c  widget_conf.c  widget_instance.c  widget_monitor.c  widget_service.c
src2/: dynamicbox-service.c  dynamicbox_service.c
tool/: widget_test.c
